# notes-app

./: .gitignore  README.md  debug.py  main.py  pyproject.toml  requirements.txt
env/: pyvenv.cfg
instance/: user.db
src/app/: run.py
src/app/website/: test_some_endpoint.py  website_funcs.py
src/app/website/jarvis/: jarvis.py  promptTemplate.py
src/app/website/models/: service.py
src/app/website/routes/: agent.py  auth.py  views.py
src/app/website/static/: main.js
src/app/website/templates/: base.html  home.html  notes.html  profilepage.html  signup.html
website/: __init__.py  agent.py  auth.py  jarvis.py  models.py  service.py  views.py  website_funcs.py
website/static/: main.js  styles.css
website/templates/: base.html  login.html  notes.html
