[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-app"
version = "0.1"
dependencies = [
  "flask",
  "flask-sqlalchemy",
  "flask-login",
  "ollama"
]

requires-python = ">= 3.12"

[project.entry-points."console_scripts"]
launch = "app.run:main"